--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <div class="row">
       <div class="col-lg-6">
-        <h1>Meet new and interesting dogs nearby.</h1>
+        <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
         <button type="button" class="btn btn-dark btn-lg download-button"><i class="fa-brands fa-apple"></i> Download</button>
         <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fa-brands fa-google-play"></i> Download</button>
       </div>
@@ -69,19 +69,19 @@
   <div class="row">
     <div class="col-lg-4 validate">
       <i class="icon fa-solid fa-circle-check fa-4x"></i>
-      <h3>Easy to use.</h3>
+      <h3 class="feature-title">Easy to use.</h3>
     <p>So easy to use, even your dog could do it.</p>
     </div>
 
     <div class="col-lg-4 validate">
       <i class="icon fa-solid fa-bullseye fa-4x"></i>
-      <h3>Elite Clientele</h3>
+      <h3 class="feature-title">Elite Clientele</h3>
     <p>We have all the dogs, the greatest dogs.</p>
     </div>
 
     <div class="col-lg-4 validate">
       <i class="icon fa-solid fa-heart fa-4x"></i>
-      <h3>Guaranteed to work.</h3>
+      <h3 class="feature-title">Guaranteed to work.</h3>
     <p>Find the love of your dog's life or your money back.</p>
     </div>
   </div>
@@ -134,34 +134,53 @@
 
   <section id="pricing">
 
-    <h2>A Plan for Every Dog's Needs</h2>
+    <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
-
-
-    <h3>Chihuahua</h3>
-    <h2>Free</h2>
-    <p>5 Matches Per Day</p>
-    <p>10 Messages Per Day</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Labrador</h3>
-    <h2>$49 / mo</h2>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Mastiff</h3>
-    <h2>$99 / mo</h2>
-    <p>Pirority Listing</p>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
+      <div class="row">
+        <div class="pricing-col col-lg-4 col-md-6">
+          <div class="card">
+           <div class="card-header">
+             <h3>Chihuahua</h3>
+           </div>
+            <div class="card-body">
+              <h2 class="price-text">Free</h2>
+              <p>5 Matches Per Day</p>
+              <p>10 Messages Per Day</p>
+              <p>Unlimited App Usage</p>
+              <button class="btn btn-lg btn-block btn-outline-dark" type="button">Sign Up</button>
+            </div>
+          </div>
+        </div>
+        <div class="pricing-col col-lg-4 col-md-6">
+          <div class="card">
+            <div class="card-header">
+              <h3>Labrador</h3>
+            </div>
+            <div class="card-body">
+              <h2 class="price-text">$49 / mo</h2>
+              <p>Unlimited Matches</p>
+              <p>Unlimited Messages</p>
+              <p>Unlimited App Usage</p>
+              <button class="btn btn-lg btn-block btn-dark" type="button">Sign Up</button>
+            </div>
+          </div>
+        </div>
+        <div class="pricing-col col-lg-4 col-md-6">
+          <div class="card">
+            <div class="card-header">
+              <h3>Mastiff</h3>
+            </div>
+            <div class="card-body">
+              <h2 class="price-text">$99 / mo</h2>
+              <p>Priority Listing</p>
+              <p>Unlimited Matches</p>
+              <p>Unlimited Messages</p>
+              <p>Unlimited App Usage</p>
+              <button class="btn btn-lg btn-block btn-dark" type="button">Sign Up</button>
+            </div>
+          </div>
+        </div>
+      </div>
   </section>
 
 
@@ -169,9 +188,9 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
+    <button class="btn btn-lg btn-dark download-button" type="button"><i class="fa-brands fa-apple"></i> Download</button>
+    <button class="btn btn-lg btn-light download-button" type="button"><i class="fa-brands fa-google-play"></i> Download</button>
 
   </section>
 
@@ -179,7 +198,10 @@
   <!-- Footer -->
 
   <footer id="footer">
-
+    <i class="social-icon fab fa-facebook-f"></i>
+    <i class="social-icon fab fa-twitter"></i>
+    <i class="social-icon fab fa-instagram"></i>
+    <i class="social-icon fas fa-envelope"></i>
     <p>© Copyright TinDog</p>
 
   </footer>
